<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:background="@drawable/background1">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center" >

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1.0"
            android:paddingBottom="30dp"
            android:textSize="50sp"
            android:text="@string/security_question_string"
            android:textColor="#FFFFFF"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button1"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@xml/button_selector"
            android:textColor="#FFFFFF"
            android:text="@string/question_1_string" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button2"
            android:textColor="#FFFFFF"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@xml/button_selector"
            android:text="@string/question_2_string" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button3"
            android:textColor="#FFFFFF"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@xml/button_selector"
            android:text="@string/question_3_string" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button4"
            android:textColor="#FFFFFF"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@xml/button_selector"
            android:text="@string/question_4_string" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button5"
            android:textColor="#FFFFFF"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:background="@xml/button_selector"
            android:text="@string/question_5_string" />

    </LinearLayout>

</ScrollView>
