<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background1">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp" >

        <com.google.android.material.textfield.TextInputEditText
            android:textCursorDrawable="@null"
            android:id="@+id/oldPin"
            android:background="@xml/mytextbox1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:ems="10"
            android:typeface="normal"
            android:textColor="#000000"
            android:hint="@string/old_pin_string"
            android:autofillHints="@string/old_pin_string"
            android:inputType="numberPassword" >

            <requestFocus />
        </com.google.android.material.textfield.TextInputEditText>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newPin"
            android:textCursorDrawable="@null"
            android:background="@xml/mytextbox1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:padding="20dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:textColor="#000000"
            android:typeface="normal"
            android:hint="@string/new_pin_string"
            android:autofillHints="@string/new_pin_string"
            android:inputType="numberPassword" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reenterNewPin"
            android:textCursorDrawable="@null"
            android:background="@xml/mytextbox1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:ems="10"
            android:textColor="#000000"
            android:typeface="normal"
            android:hint="@string/re_enter_new_pin_string"
            android:autofillHints="@string/re_enter_new_pin_string"
            android:inputType="numberPassword" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@xml/button_selector"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:layout_gravity="center"
            android:paddingBottom="10dp"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:paddingTop="10dp"
            android:text="@string/change_string" />

    </LinearLayout>

</ScrollView>
